--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@types/better-sqlite3": "^5.4.3",
     "better-sqlite3": "^7.4.3",
     "cors": "^2.8.5",
     "debug": "^4.3.2",
