--- a/client/angular.json
+++ b/client/angular.json
@@ -51,8 +51,8 @@
               "src/assets"
             ],
             "styles": [
+              "src/styles.scss",
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -120,8 +120,8 @@
               "src/assets"
             ],
             "styles": [
+              "src/styles.scss",
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss"
             ],
             "scripts": []
           }
