--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~13.0.1",
     "@angular/platform-browser-dynamic": "~13.0.1",
     "@angular/router": "~13.0.1",
+    "@ngrx/effects": "^12.5.1",
     "@ngrx/store": "^12.5.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
