--- a/server/package.json
+++ b/server/package.json
@@ -6,19 +6,20 @@
   "dependencies": {
     "@types/better-sqlite3": "^5.4.3",
     "better-sqlite3": "^7.4.3",
+    "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
     "debug": "^4.3.2",
     "express": "^4.17.1",
     "express-winston": "^4.1.0",
-    "winson": "^1.0.0",
-    "winston": "^3.3.3",
-    "cheerio": "^1.0.0-rc.10",
     "fetch-cookie": "^1.0.0",
+    "lodash": "^4.17.21",
     "node-fetch": "^2.6.1",
-    "request-promise": "^4.2.6"
+    "request-promise": "^4.2.6",
+    "winson": "^1.0.0",
+    "winston": "^3.3.3"
   },
   "scripts": {
-    "start": "tsc && node --unhandled-rejections=strict ./dist/app.js",
+    "start": "tsc && node --unhandled-rejections=strict ./dist/app.js --watch",
     "debug": "export DEBUG=* && npm run start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -26,6 +27,7 @@
     "@types/cors": "^2.8.12",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
+    "@types/lodash": "^4.14.177",
     "source-map-support": "^0.5.19",
     "tslint": "^6.1.3",
     "typescript": "^4.3.5"
